проверить HTML-разметку

--- a/index.html
+++ b/index.html
@@ -5,8 +5,149 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+	<header class="main-header">
+		<nav class="main-navigation">
+			<a class="main-header-logo" href="index.html">
+			<img src="img/logo.svg" width="100" height="20" 
+			alt="Логотип Нердс магазин">
+			</a>
+			<ul class="site-navigation">
+				<li><a href="#">Студия</a></li>
+				<li><a href="#">Клиенты</a></li>
+				<li><a href="#">Магазин</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<ul class="basket-navigation">
+				<li class="basket-link"><a href="#">Корзина</a></li>
+			</ul>
+		</nav>
+		<section class="info-design">
+			<b>Долго, дорого, скрупулезно.</b>
+			<p class="site-design">
+				Математически выверенный дизайн
+				для вашего сайта или мобильного 
+				приложения.
+				<a class="btn-info-design" 
+				href="#">Узнать больше</a>
+			</p>
+			
+		</section>
+	</header>
+	<main class="container">
+		<section class="option-offer">
+			<ul class="offer-list">
+				<li class="offer-item">
+					<p class="offer-item-image">
+						<img src="img/offer-item-1.jpg" width="200" height="180" 
+						 alt="веб-сайты">
+					</p>
+					<h3 class="offer-item-title">Веб-сайты</h3>
+					<p class="offer-item-info">
+						Мир никогда не будет прежним
+						после того как увидит ваш сайт!
+						<a class="offer-btn-web " href="#">Заказать</a>
+					</p>
+				</li>
+				<li class="offer-item">
+					<p class="offer-item-image">
+						<img src="img/offer-item-2.jpg" width="200" height="180" 
+						 alt="веб-сайты">
+					</p>
+					<h3 class="offer-item-title">Приложения</h3>
+					<p class="offer-item-info">
+						Покорите топ-10 приложений 
+						в AppStore и Google Play
+						<a class="offer-btn-mobile" href="#">Заказать</a>
+					</p>
+				</li>
+				<li class="offer-item">
+					<p class="offer-item-image">
+						<img src="img/offer-item-3.jpg" width="200" height="180" 
+						 alt="веб-сайты">
+					</p>
+					<h3 class="offer-item-title">Веб-сайты</h3>
+					<p class="offer-item-info">
+						Мир никогда не будет прежним
+						после того как увидит ваш сайт!
+						<a href="#">Заказать</a>
+					</p>
+				</li>
+			</ul>	
+		</section>
+		<article class="detail-left-column">
+			 <b class="detail-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+                <p class="detail-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+                <b class="detail-list-title">Выполняем заказы на разработку:</b>
+                <ul class="detail-list">
+                    <li>Веб-сайтов любой сложности</li>
+                    <li>Мобильных приложений для iOS и Android</li>
+                    <li>Слайдшоу и видео для корпоративных презентаций</li>
+                </ul>
+		</article>
+		<section class="detail-right-column">
+			<p class="detail-header-image">
+				<img src="img/main-logo.png" width="190" height="90" alt="Nerds">
+			</p>
+			<b>с 2004 года любим точность во всем:</b>
+			<table>
+				<tr>
+					<td>146<sup>%</sup></td>
+					<td>100<sup>%</sup></td>
+					<td>50<sup>%</sup></td>
+				</tr>
+				<tr>
+					<td>Уровень самоотдачи</td>
+					<td>Соблюдение сроков</td>
+					<td>Минимальная предоплата</td>
+				</tr>
+			</table>
+			<p class="brand">
+                <a href="#">
+                    <img src="img/brand-glukhanko.png" width="200" height="70" 
+					alt="html academy">
+                </a>
+            </p>
+            <p class="brand">
+                <a href="#">
+                    <img src="img/brand-borodinski.png" width="200" height="70" 
+					alt="Barbershop Borodinsky">
+                </a>
+            </p>
+            <p class="brand">
+                <a href="#">
+                    <img src="img/brand-Pink.png" width="200" height="70" 
+					alt="Pink">
+                </a>
+            </p>
+			 <p class="brand">
+                <a href="#">
+                    <img src="img/brand-Mishka.png" width="200" height="70" 
+					alt="Mishka">
+                </a>
+            </p>
+		</section>
+	</main>
+	<footer class="main-footer">
+		<p class="footer-contacts">
+			191186, Санкт-Петербург.<br>
+			ул.Б.Конюшенная,д. 19/8<br>
+			<br>
+			тел.+7(812)275-75-75<br>
+			<br>
+			<a href="#">Напишите нам</a>
+		</p>
+		<div class="footer-social">
+			<ul>
+				<li><a class="social-button" href="#">Вконтакте</a></li>
+				<li><a class="social-button" href="#">Фейсбук</a></li>
+				<li><a class="social-button" href="#">Инстаграм</a></li>
+			</ul>
+		</div>
+		<section class="footer-info">
+			<p class="footer-title"><b>Давайте дружить, это выгодно!</b></p>
+			<p class="footer-info-item">Скидка 10% для друзей из социальных сетей</p>
+		</section>
+	</footer>
   </body>
 </html>
+ 
