--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo" href="index.html">
-			<img src="img/logo.svg" width="100" height="20" 
-			alt="Логотип Нердс магазин">
+				<img src="img/logo.svg" width="100" height="20" 
+				alt="Логотип Нердс магазин">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="#">Студия</a></li>
@@ -27,10 +27,9 @@
 				Математически выверенный дизайн
 				для вашего сайта или мобильного 
 				приложения.
-				<a class="btn-info-design" 
-				href="#">Узнать больше</a>
 			</p>
-			
+			<a class="btn-info-design" 
+				href="#">Узнать больше</a>			
 		</section>
 	</header>
 	<main class="container">
@@ -44,9 +43,9 @@
 					<h3 class="offer-item-title">Веб-сайты</h3>
 					<p class="offer-item-info">
 						Мир никогда не будет прежним
-						после того как увидит ваш сайт!
-						<a class="offer-btn-web " href="#">Заказать</a>
-					</p>
+						после того как увидит ваш сайт!						
+					</p>					
+					<a class="offer-btn-web " href="#">Заказать</a>
 				</li>
 				<li class="offer-item">
 					<p class="offer-item-image">
@@ -56,9 +55,10 @@
 					<h3 class="offer-item-title">Приложения</h3>
 					<p class="offer-item-info">
 						Покорите топ-10 приложений 
-						в AppStore и Google Play
-						<a class="offer-btn-mobile" href="#">Заказать</a>
+						в AppStore и Google Play						
 					</p>
+					
+					<a class="offer-btn-mobile" href="#">Заказать</a>					
 				</li>
 				<li class="offer-item">
 					<p class="offer-item-image">
@@ -68,9 +68,9 @@
 					<h3 class="offer-item-title">Веб-сайты</h3>
 					<p class="offer-item-info">
 						Мир никогда не будет прежним
-						после того как увидит ваш сайт!
-						<a href="#">Заказать</a>
-					</p>
+						после того как увидит ваш сайт!					
+					</p>				
+						<a class="offer-site" href="#">Заказать</a>					
 				</li>
 			</ul>	
 		</section>
@@ -101,41 +101,44 @@
 					<td>Минимальная предоплата</td>
 				</tr>
 			</table>
-			<p class="brand">
-                <a href="#">
-                    <img src="img/brand-glukhanko.png" width="200" height="70" 
-					alt="html academy">
-                </a>
-            </p>
-            <p class="brand">
-                <a href="#">
-                    <img src="img/brand-borodinski.png" width="200" height="70" 
-					alt="Barbershop Borodinsky">
-                </a>
-            </p>
-            <p class="brand">
-                <a href="#">
-                    <img src="img/brand-Pink.png" width="200" height="70" 
-					alt="Pink">
-                </a>
-            </p>
-			 <p class="brand">
-                <a href="#">
-                    <img src="img/brand-Mishka.png" width="200" height="70" 
-					alt="Mishka">
-                </a>
-            </p>
+			<ul class="brand">
+				<li class="brand-item">
+					<a href="#">
+						<img src="img/brand-glukhanko.png" width="200" height="70" 
+						alt="html academy">
+					</a>
+				</li>
+				<li class="brand-item">
+					<a href="#">
+						<img src="img/brand-borodinski.png" width="200" height="70" 
+						alt="Barbershop Borodinsky">
+					</a>
+				</li>
+				<li class="brand-item">
+					<a href="#">
+						<img src="img/brand-Pink.png" width="200" height="70" 
+						alt="Pink">
+					</a>
+				</li>
+				<li class="brand-item">
+					<a href="#">
+						<img src="img/brand-Mishka.png" width="200" height="70" 
+						alt="Mishka">
+					</a>
+				</li>
 		</section>
 	</main>
 	<footer class="main-footer">
-		<p class="footer-contacts">
-			191186, Санкт-Петербург.<br>
-			ул.Б.Конюшенная,д. 19/8<br>
-			<br>
-			тел.+7(812)275-75-75<br>
-			<br>
+		<div class="container-contacts">
+			<p class="footer-contacts">
+				191186, Санкт-Петербург.<br>
+				ул.Б.Конюшенная,д. 19/8<br>
+				<br>
+				тел.+7(812)275-75-75<br>
+				<br>
+			</p>
 			<a href="#">Напишите нам</a>
-		</p>
+		</div>
 		<div class="footer-social">
 			<ul>
 				<li><a class="social-button" href="#">Вконтакте</a></li>
