Повторная проверка разметки

--- a/catalog.html
+++ b/catalog.html
@@ -26,15 +26,15 @@
 	<main class="catalog-container">
 		<Section class="catalog-left-column">
 			<h3 class="catalog-price">Стоимость:</h3>
-			<!--Неизвестный объект-->
-			<!--форм-->
-			<h3 class="catalog-grid">Сетка</h3>
-			<!--форм-->
-			<h3 class="catalog-features">Особенности</h3>
-			<!--форм-->
-			<p class="button"><a href="#">Показать</a></p>
-			
-			
+			<div class="container-left-column">
+				<!--Неизвестный объект-->
+				<!--форм-->
+				<h3 class="catalog-grid">Сетка</h3>
+				<!--форм-->
+				<h3 class="catalog-features">Особенности</h3>
+				<!--форм-->
+				<a class="button-show" href="#">Показать</a>
+			</div>	
 		</section>
 		<section class="catalog-right-column">
 			<h3 class="catalog-sort">Сортировать:</h3>
@@ -47,55 +47,59 @@
 				<li><a href="#" class="catalog-arrow-down"></a></li>
 				<li><a href="#" class="catalog-arrow-up"></a></li>
 			</ul>
-			<ul class="image-item">
-				<li>
-					<a href="#"><img src="img/site-1.jpg" width="200" height="190" 
-					alt="Седона»"> 
-					</a>
-				</li>
-				<li>
-					<a href="#"><img src="img/site-2.jpg" width="200" height="190" 
-					alt="Пинк»"> 
-					</a>
-				</li>
-				<li>
-					<a href="#"><img src="img/site-3.jpg" width="200" height="190" 
-					alt="Барбершоп"> 
-					</a>
-				</li>
-				<li>
-					<a href="#"><img src="img/site-4.jpg" width="200" height="190" 
-					alt="Мишка"> 
-					</a>
-				</li>
-				<li>
-					<a href="#"><img src="img/site-5.jpg" width="200" height="190" 
-					alt="А+"> 
-					</a>
-				</li>
-				<li>
-					<a href="#"><img src="img/site-6.jpg" width="200" height="190" 
-					alt="Крафтовый квас всему голова!"> 
-					</a>
-				</li>
-			</ul>
+			<div class="catalog-right-column">
+				<ul class="image-item">
+					<li>
+						<a href="#"><img src="img/site-1.jpg" width="200" height="190" 
+							alt="Седона»"> 
+						</a>
+					</li>
+					<li>
+						<a href="#"><img src="img/site-2.jpg" width="200" height="190" 
+							alt="Пинк»"> 
+						</a>
+					</li>
+					<li>
+						<a href="#"><img src="img/site-3.jpg" width="200" height="190" 
+							alt="Барбершоп"> 
+						</a>
+					</li>
+					<li>
+						<a href="#"><img src="img/site-4.jpg" width="200" height="190" 
+							alt="Мишка"> 
+						</a>
+					</li>
+					<li>
+						<a href="#"><img src="img/site-5.jpg" width="200" height="190" 
+							alt="А+"> 
+						</a>
+					</li>
+					<li>
+						<a href="#"><img src="img/site-6.jpg" width="200" height="190" 
+							alt="Крафтовый квас всему голова!"> 
+						</a>
+					</li>
+				</ul>
+			</div>	
 			<ul class="pagination-list">
-          <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
-          <li class="pagination-item "><a>2</a></li>
-          <li class="pagination-item"><a href="#">3</a></li>
-          <li class="pagination-item"><a href="#">Следующая</a></li>
-        </ul>
+				<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+				<li class="pagination-item "><a>2</a></li>
+				<li class="pagination-item"><a href="#">3</a></li>
+				<li class="pagination-item"><a href="#">Следующая</a></li>
+			</ul>
 		</section>
 	</main>
 	<footer class="main-footer">
-		<p class="footer-contacts">
-			191186, Санкт-Петербург.<br>
-			ул.Б.Конюшенная,д. 19/8<br>
-			<br>
-			тел.+7(812)275-75-75<br>
-			<br>
+		<div class="container-contacts">
+			<p class="footer-contacts">
+				191186, Санкт-Петербург.<br>
+				ул.Б.Конюшенная,д. 19/8<br>
+				<br>
+				тел.+7(812)275-75-75<br>
+				<br>			
+			</p>
 			<a href="#">Напишите нам</a>
-		</p>
+		</div>
 		<div class="footer-social">
 			<ul>
 				<li><a class="social-button" href="#">Вконтакте</a></li>
