Добавлен список в левую колонку

--- a/catalog.html
+++ b/catalog.html
@@ -29,11 +29,25 @@
 			<div class="container-left-column">
 				<!--Неизвестный объект-->
 				<!--форм-->
-				<h3 class="catalog-grid">Сетка</h3>
-				<!--форм-->
-				<h3 class="catalog-features">Особенности</h3>
-				<!--форм-->
+				<h3 class="catalog-grid">Сетка:</h3>
+				<!--Форм
+				<ul class="catalog-grid-list">
+					<li>Адаптивная</li>
+					<li>Фиксированная</li>
+					<li>Резиновая</li>
+				</ul>	
+				-->	
+				<h3 class="catalog-features">Особенности:</h3>
+				<!--Форм
+				<ul class="catalog-features-list">
+					<li>Слайдер</li>
+					<li>Блок преимуществ</li>
+					<li>Новости</li>
+					<li>Галерея</li>
+					<li>Корзина</li>
+				</ul>	
 				<a class="button-show" href="#">Показать</a>
+				-->
 			</div>	
 		</section>
 		<section class="catalog-right-column">
