--- a/catalog.html
+++ b/catalog.html
@@ -29,6 +29,10 @@
 			<div class="container-left-column">
 				<!--Неизвестный объект-->
 				<!--форм-->
+				<span class="catalog-price-from">от</span>
+				<!--форм-->
+				<span class="catalog-price-till">до</span>
+				<!--Форм-->
 				<h3 class="catalog-grid">Сетка:</h3>
 				<!--Форм
 				<ul class="catalog-grid-list">
