Изображения для проекта

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo" href="index.html">
-			<img src="img/logo.svg" width="100" height="20" 
+			<img src="img/logo.png" width="160" height="65" 
 			alt="Логотип Нердс магазин">
 			</a>
 			<ul class="site-navigation">
@@ -68,32 +68,32 @@
 			<div class="catalog-right-column">
 				<ul class="image-item">
 					<li>
-						<a href="#"><img src="img/site-1.jpg" width="200" height="190" 
+						<a href="#"><img src="img/site-1.jpg" width="360" height="576" 
 							alt="Седона»"> 
 						</a>
 					</li>
 					<li>
-						<a href="#"><img src="img/site-2.jpg" width="200" height="190" 
+						<a href="#"><img src="img/site-2.jpg" width="360" height="576" 
 							alt="Пинк»"> 
 						</a>
 					</li>
 					<li>
-						<a href="#"><img src="img/site-3.jpg" width="200" height="190" 
+						<a href="#"><img src="img/site-3.jpg" width="360" height="576" 
 							alt="Барбершоп"> 
 						</a>
 					</li>
 					<li>
-						<a href="#"><img src="img/site-4.jpg" width="200" height="190" 
+						<a href="#"><img src="img/site-4.jpg" width="360" height="576" 
 							alt="Мишка"> 
 						</a>
 					</li>
 					<li>
-						<a href="#"><img src="img/site-5.jpg" width="200" height="190" 
+						<a href="#"><img src="img/site-5.jpg" width="360" height="576" 
 							alt="А+"> 
 						</a>
 					</li>
 					<li>
-						<a href="#"><img src="img/site-6.jpg" width="200" height="190" 
+						<a href="#"><img src="img/site-6.jpg" width="360" height="576" 
 							alt="Крафтовый квас всему голова!"> 
 						</a>
 					</li>
@@ -118,6 +118,8 @@
 			</p>
 			<a href="#">Напишите нам</a>
 		</div>
+			<img src="img/map.jpg" width="1725" height="808"
+			alt="Карта">
 		<div class="footer-social">
 			<ul>
 				<li><a class="social-button" href="#">Вконтакте</a></li>
