--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="img/logo.svg" width="100" height="20" 
+				<img src="img/logo.png" width="160" height="65" 
 				alt="Логотип Нердс магазин">
 			</a>
 			<ul class="site-navigation">
@@ -37,7 +37,7 @@
 			<ul class="offer-list">
 				<li class="offer-item">
 					<p class="offer-item-image">
-						<img src="img/offer-item-1.jpg" width="200" height="180" 
+						<img src="img/offer-item-1.png" width="300" height="146" 
 						 alt="веб-сайты">
 					</p>
 					<h3 class="offer-item-title">Веб-сайты</h3>
@@ -49,7 +49,7 @@
 				</li>
 				<li class="offer-item">
 					<p class="offer-item-image">
-						<img src="img/offer-item-2.jpg" width="200" height="180" 
+						<img src="img/offer-item-2.jpg" width="300" height="146" 
 						 alt="веб-сайты">
 					</p>
 					<h3 class="offer-item-title">Приложения</h3>
@@ -62,7 +62,7 @@
 				</li>
 				<li class="offer-item">
 					<p class="offer-item-image">
-						<img src="img/offer-item-3.jpg" width="200" height="180" 
+						<img src="img/offer-item-3.png" width="300" height="146" 
 						 alt="веб-сайты">
 					</p>
 					<h3 class="offer-item-title">Веб-сайты</h3>
@@ -86,7 +86,7 @@
 		</article>
 		<section class="detail-right-column">
 			<p class="detail-header-image">
-				<img src="img/main-logo.png" width="190" height="90" alt="Nerds">
+				<img src="img/main-logo.jpg" width="360" height="208" alt="Nerds">
 			</p>
 			<b>с 2004 года любим точность во всем:</b>
 			<table>
@@ -104,25 +104,25 @@
 			<ul class="brand">
 				<li class="brand-item">
 					<a href="#">
-						<img src="img/brand-glukhanko.png" width="200" height="70" 
+						<img src="img/brand-html-academy.png" width="260" height="180" 
 						alt="html academy">
 					</a>
 				</li>
 				<li class="brand-item">
 					<a href="#">
-						<img src="img/brand-borodinski.png" width="200" height="70" 
+						<img src="img/brand-Barbershop.png" width="260" height="180" 
 						alt="Barbershop Borodinsky">
 					</a>
 				</li>
 				<li class="brand-item">
 					<a href="#">
-						<img src="img/brand-Pink.png" width="200" height="70" 
+						<img src="img/brand-Pink-shop.png" width="260" height="180" 
 						alt="Pink">
 					</a>
 				</li>
 				<li class="brand-item">
 					<a href="#">
-						<img src="img/brand-Mishka.png" width="200" height="70" 
+						<img src="img/brand-Mishka-shop.png" width="260" height="180" 
 						alt="Mishka">
 					</a>
 				</li>
@@ -139,6 +139,8 @@
 				<br>
 			</p>
 			<a href="#">Напишите нам</a>
+			<img src="img/map.jpg" width="1725" height="808"
+			alt="Карта">
 		</div>
 		<div class="footer-social">
 			<ul>
