Стили css на проверку

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
 			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
 				<h3 class="catalog-price">Стоимость:</h3>
 				<div class="catalog-range-price">
-					<input class="visually-hidden filter-input filter-input-checkbox"
+					<input class="visually-hidden filter-input filter-input-range"
 					type="range" min="0" max="15000" name="filter-range">
 				</div>
 				<div class="catalog-controls-left">
@@ -61,7 +61,7 @@
 						<li class="filter-option">
 							<input class="visually-hidden filter-input 
 							filter-input-radio" type="radio" name="site-grid"
-							value="site-Rubber" id="filter-Rubber">
+							value="site-Rubber" id="filter-Rubber" disabled>
 							<label for="filter-Rubber">Резиновая</label>
 						</li>				
 					</ul>				
