--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
 				<li class="cart-link"><a href="#">Корзина</a></li>
 			</ul>
 		</nav>
-		<h1>Магазин готовых шаблонов</h1>
+		<h1 class="main-header-title">Магазин готовых шаблонов</h1>
 	</header>
 	<main class="catalog-container">
 		<Section class="catalog-left-column">
@@ -103,7 +103,7 @@
 		<section class="catalog-right-column">
 			<h3 class="catalog-sort">Сортировать:</h3>
 			<ul class="list-item">
-				<li><a href="#" class="catalog-option">По цене</a></li>
+				<li><a href="#" class="catalog-option-active">По цене</a></li>
 				<li><a href="#" class="catalog-option-active">По типу</a></li>
 				<li><a href="#" class="catalog-option-active">По функционалу</a></li>
 			</ul>
