--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<ul class="offer-list">
 				<li class="offer-item">
 					<p class="offer-item-image">
-						<img src="img/offer-item-1.png" width="300" height="146" 
+						<img src="img/offer-item-1.jpg" width="300" height="146" 
 						 alt="веб-сайты">
 					</p>
 					<h3 class="offer-item-title">Веб-сайты</h3>
@@ -102,7 +102,7 @@
 				</li>
 				<li class="offer-item">
 					<p class="offer-item-image">
-						<img src="img/offer-item-3.png" width="300" height="146" 
+						<img src="img/offer-item-3.jpg" width="300" height="146" 
 						 alt="веб-сайты">
 					</p>
 					<h3 class="offer-item-title">Веб-сайты</h3>
@@ -133,9 +133,9 @@
 			<b>с 2004 года любим точность во всем:</b>
 			<table>
 				<tr>
-					<th>146<sup>%</sup></td>
-					<th>100<sup>%</sup></td>
-					<th>50<sup>%</sup></td>
+					<th>146<sup>%</sup></th>
+					<th>100<sup>%</sup></th>
+					<th>50<sup>%</sup></th>
 				</tr>
 				<tr>
 					<td>Уровень самоотдачи</td>
@@ -172,7 +172,7 @@
 		</section>
 	</main>
 	<figure>
-		<img class="map-image" src="img/map.jpg">
+		<img class="map-image" src="img/map.jpg" alt="Карта">
 	</figure>
 	<footer class="main-footer">
 		<div class="container-contacts">
