Изменение цвета шрифта

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <p class="detail-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
                 <b class="detail-list-title">Выполняем заказы на разработку:</b>
                 <ul class="detail-list">
-                    <li>Веб-сайтов любой сложности</li>
-                    <li>Мобильных приложений для iOS и Android</li>
-                    <li>Слайдшоу и видео для корпоративных презентаций</li>
+                    <li class="text-order">Веб-сайтов любой сложности</li>
+                    <li class="text-order">Мобильных приложений для iOS и Android</li>
+                    <li class="text-order">Слайдшоу и видео для корпоративных презентаций</li>
                 </ul>
 		</article>
 		<section class="detail-right-column">
@@ -195,7 +195,7 @@
 		</div>
 		<section class="footer-info">
 			<h3 class="visually-hidden">Скидка</h3>
-			<p class="footer-title"><b>Давайте дружить, это выгодно!</b></p>
+			<b class="footer-title">Давайте дружить, это выгодно!</b>
 			<p class="footer-info-item">Скидка 10% для друзей из социальных сетей</p>
 		</section>
 	</footer>
