--- a/catalog.html
+++ b/catalog.html
@@ -36,12 +36,12 @@
 					type="range" min="0" max="15000" name="filter-range">
 				</div>
 				<div class="catalog-controls-left">
-					<span class="catalog-price-from">от</span>
-					<input class="catalog-min-price" type="text" value="0">
+					<span class="text-range catalog-price-from">от</span>
+					<input class="text-range catalog-min-price" type="text" value="0">
 				</div>
 				<div class="catalog-controls-right">
-					<span class="catalog-price-till">до</span>
-					<input class="catalog-max-price" type="text" value="15 000">
+					<span class="text-range catalog-price-till">до</span>
+					<input class="text-range catalog-max-price" type="text" value="15 000">
 				</div>	
 				<fieldset>
 					<legend class="catalog-title">Сетка:</legend>			
@@ -210,7 +210,7 @@
 				тел.+7(812)275-75-75<br>
 				<br>			
 			</p>
-			<a href="#">Напишите нам</a>
+			<a class="button btn-contacts" href="#">Напишите нам</a>
 		</div>
 			<img src="img/map.jpg" width="1725" height="808"
 			alt="Карта">
@@ -223,7 +223,7 @@
 		</div>
 		<section class="footer-info">
 			<h3 class="visually-hidden">Скидка</h3>
-			<p class="footer-title"><b>Давайте дружить, это выгодно!</b></p>
+			<b class="footer-title">Давайте дружить, это выгодно!</b>
 			<p class="footer-info-item">Скидка 10% для друзей из социальных сетей</p>
 		</section>
 	</footer>
