Главная страница (flex)

--- a/catalog.html
+++ b/catalog.html
@@ -47,19 +47,19 @@
 					<legend class="catalog-title">Сетка:</legend>			
 					<ul class="catalog-grid-list">
 						<li class="filter-option">
-							<input class="visually-hidden filter-input 
+							<input class="visually-hidden1 filter-input 
 							filter-input-radio" type="radio" name="site-grid"
 							value="site-adaptive" id="filter-Adaptive" checked>
 							<label for="filter-Adaptive">Адаптивная</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input 
+							<input class="visually-hidden1 filter-input 
 							filter-input-radio" type="radio" name="site-grid"
 							value="site-Fixed" id="filter-Fixed">
 							<label for="filter-Fixed">Фиксированная</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input 
+							<input class="visually-hidden1 filter-input 
 							filter-input-radio" type="radio" name="site-grid"
 							value="site-Rubber" id="filter-Rubber" disabled>
 							<label for="filter-Rubber">Резиновая</label>
@@ -71,27 +71,27 @@
 					<legend class="catalog-title">Особенности:</legend>
 					<ul class="catalog-features-list">
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" 
+							<input class="visually-hidden1 filter-input filter-input-checkbox" 
 							type="checkbox" name="slider" id="filter-slider" checked>
 							<label for="filter-slider">Слайдер</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" 
+							<input class="visually-hidden1 filter-input filter-input-checkbox" 
 							type="checkbox" name="block" id="filter-block">
 							<label for="filter-block">Блок преимуществ</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" 
+							<input class="visually-hidden1 filter-input filter-input-checkbox" 
 							type="checkbox" name="slider" id="filter-new" checked>
 							<label for="filter-new">Новости</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" 
+							<input class="visually-hidden1 filter-input filter-input-checkbox" 
 							type="checkbox" name="gallery" id="filter-gallery">
 							<label for="filter-gallery">Галерея</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" 
+							<input class="visually-hidden1 filter-input filter-input-checkbox" 
 							type="checkbox" name="cart" id="filter-cart">
 							<label for="filter-cart">Корзина</label>
 						</li>					
