--- a/catalog.html
+++ b/catalog.html
@@ -6,10 +6,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<link href="css/outline.css" rel="stylesheet">
   </head>
   <body>
-	<header class="main-header">
-		<nav class="main-navigation">
+	<header class="main-catalog-header">
+		<nav class="main-navigation container">
 			<a class="main-header-logo" href="#">				
 					<img src="img/logo.png" width="160" height="65" 
 					alt="Логотип Нердс магазин">	
