--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline1.css" rel="stylesheet">
+	<link href="css/outline.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-header">
@@ -71,7 +71,7 @@
                  </figure>                          
         </div>
 	</header>
-	<main class="container">
+	<main>
 		<section class="option-offer">
 			<ul class="offer-list container">
 				<li class="offer-item">
@@ -189,20 +189,21 @@
 			</p>
 			<a class="button btn-contacts" href="#">Напишите нам</a>
 	</div>
-	<footer class="main-footer container">
-		
-		<div class="footer-social-container">
+	<footer class="main-footer">
+		<div class="footer-info-social container">
 			<ul class="footer-social">
 				<li><a class="social-button" href="#">Вконтакте</a></li>
 				<li><a class="social-button" href="#">Фейсбук</a></li>
 				<li><a class="social-button" href="#">Инстаграм</a></li>
 			</ul>
-		</div>
-		<section class="footer-info">
-			<h3 class="visually-hidden">Скидка</h3>
-			<b class="footer-title">Давайте дружить, это выгодно!</b>
-			<p class="footer-info-item">Скидка 10% для друзей из социальных сетей</p>
-		</section>
+			
+		
+			<section class="footer-info">
+				<h3 class="visually-hidden">Скидка</h3>
+				<b class="footer-title">Давайте дружить, это выгодно!</b>
+				<p class="footer-info-item">Скидка 10% для друзей из социальных сетей</p>
+			</section>
+		</div>		
 	</footer>
 	<div class="visually-hidden feedback-container">
         <form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
